# stavros-lib

./: .gitignore  CLAUDE.md  LICENSE  README.md  dilbert.py  pyproject.toml  requirements-docker.txt  requirements.txt  sandbox.py  setup.py
.claude/: settings.local.json
.github/: copilot-instructions.md
.idx/: dev.nix
openspec/: project.md
openspec/changes/add-toml-parsing/: tasks.md
openspec/changes/archive/2025-12-27-add-datetime-helpers/: proposal.md  tasks.md
openspec/changes/archive/2025-12-27-add-env-loading/: proposal.md  tasks.md
openspec/changes/archive/2025-12-27-add-file-utilities/: proposal.md  tasks.md
openspec/changes/archive/2025-12-27-add-probability-and-ftp-utilities/: proposal.md  tasks.md
openspec/changes/archive/2025-12-27-add-string-utilities/: proposal.md  tasks.md
openspec/changes/archive/2025-12-27-add-toml-parsing/: proposal.md  (+1 more)
openspec/specs/datetime-utilities/: spec.md
openspec/specs/dependency-management/: spec.md
openspec/specs/env-loading/: spec.md
openspec/specs/file-utilities/: spec.md
openspec/specs/ftp-utilities/: spec.md
openspec/specs/probability-utilities/: spec.md
openspec/specs/string-utilities/: spec.md
openspec/specs/toml-parsing/: spec.md
openspec/specs/xml-utilities/: spec.md
stavroslib/: __init__.py  datetime.py  dict.py  file.py  ftp.py  misc.py  parse.py  pdf.py  probability.py  string.py  xml.py
stavroslib/tests/: test_datetime.py  test_dict.py  test_file.py  test_ftp.py  test_misc.py  test_parse.py  test_parse_toml.py  test_pdf.py  test_probability.py  test_string.py  test_xml.py
(+13 files in other folders)
